--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #b3e5fc;
+    background-color: #3fbdf8;
     color: #333;
     display: flex;
 }
